# pdbg

./: .shellcheck-ignore  INDEX.md  Makefile.am  README.md  generate_dt_header.sh  generate_dtb.py  meson.build  meson_options.txt
.github/workflows/: github-actions.yml
ccan/: meson.build
libcronus/: meson.build
libfdt/: meson.build
libi2c/: meson.build
libpdbg/: hwunit.h  libpdbg.c  libpdbg.h  meson.build  ocmb.c  sbefifo.c
libsbefifo/: ffdc.c  meson.build  operation.c
m4/: bmc-kernel.dts.m4
src/: meson.build
tests/: driver.sh  meson.build  run_test.sh  test_attr_array.sh  test_attr_packed.sh  test_driver.sh  test_hexdump.sh  test_hw_bmc.sh  test_selection.sh  test_selection2.sh
